--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,9 @@ header nav{
 }
 
 
-/* footer */
 
-/*body{
+
+/* body{
     margin: 1em;
     display: grid;
     grid: auto-flow min-content / repeat(12, 1fr);
@@ -94,17 +94,19 @@ main{
 }
 
 
-/*      (SAVE FOR FUTURE USE?)
+
+ /*   (SAVE FOR FUTURE USE?)  */
 .img-responsive{
-    max-width: 100%;
+    max-width: 50%;
     margin: 0 auto;
 }
 
 .row{
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
-      (SAVE FOR FUTURE USE?)  */
+   /*   (SAVE FOR FUTURE USE?)  */
 
 
 
@@ -121,6 +123,50 @@ gallery{
     background-position: center;
 }
 */
+
+
+
+ /*   Footer  */
+
+ footer{
+    display: flex;
+    flex-direction: column;
+    background-color: #A93F55;
+    color: #fff;
+    padding: 80px 0;
+    text-align: center;
+    align-items: center;
+}
+
+footer ul{
+    display: flex;
+    margin-bottom: 25px;
+    font-size: 32px;
+}
+
+footer ul li{
+    margin: 5px 20px;
+}
+
+footer ul li:first-child{
+    margin-left: auto;
+}
+
+footer ul li:last-child{
+    margin-right: auto;
+}
+
+footer p{
+    
+    font-size: 18px;
+    color: rgba(255, 255, 255, .6);
+    margin-bottom: 12px;
+}
+
+footer p a{
+    color: #fff
+}
+
 
 /* Mobile Query */
 
