--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;  
 } 
 
+html {
+    scroll-behavior: smooth;
+  }
+
 body{
     font: normal 18px "Arial", sans-serif ;
     text-align: center;
@@ -23,6 +27,7 @@ a{
     color: inherit;
     cursor: pointer;
     opacity: 0.9;
+    
 }
 
 a:hover{
@@ -30,7 +35,7 @@ a:hover{
 }
 
 .round{
-    border: 6px solid #2196F3;
+    border: 6px solid #000000;
     border-radius: 50%;
 }
 
@@ -40,35 +45,82 @@ ul.grid {
     flex-wrap: wrap;
     justify-content: center;
 }
+
+
+/* Hero */
+.hero { 
+    background-color: transparent;
+    position: relative;
+    justify-content: center;
+    min-height: 10px;
+    color: #fff;
+    text-align: center;
+}
+}
+
+.hero .hero-boba{
+    position: relative;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    
+    background-color: #1A77C1;
+}
+
+.hero .hero-boba:after{
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    
+}
+
+
 /* Header */
 
 header{
-    
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     align-items: center;
     justify-content: space-around;
-    padding: 40px 100px 25px;
+    padding: 40px 50px 25px;
     color: #A93F55;
     background-color: rgba(0, 0, 0, .7);
-    z-index: 10;
+    z-index: auto;
+}
+
+header h2{
+    font-family:  normal 35px "Arial", serif;
 }
 
 header nav{
     display: flex;
 }
 
-.hero { 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header nav li a{
+    margin: auto 15px;
 }
+
+header nav li:first-child{
+    margin-left: 0;
+}
+
+header nav li:last-child{
+    margin-right: 0;
+}
+
+
+
 
 @media(max-width: 1000px){
     header{
         padding: 20px 50px;
+       
     }
 }
 
@@ -81,6 +133,23 @@ header nav{
     }
 }
 
+
+/* ABOUT */
+
+.aboutboba {
+    border-top: 2em;
+    flex-flow: row;
+}
+
+.aboutboba p{
+    border-bottom: 1px solid white ;
+    padding: 15px 0px;
+}
+
+.aboutboba .bobaimg{
+    border-radius: 3px;
+    justify-self: right;
+}
 
 
 /* body{
@@ -126,8 +195,7 @@ main{
  /*   (SAVE FOR FUTURE USE?)  */
 .img-responsive{
     max-width: 100%;
-    padding: 20px ;
-    width: 50%;
+    justify-content: space-around;
     margin: 2 auto;
 }
 
@@ -148,12 +216,14 @@ main{
     background-color: #fff;
 }
 
+/*
 .gallery .grid li{
     padding: 20px;
     height: 350px;
     border-radius: 3px; 
     justify-content: center;
     flex-direction: row;
+    background-image: cover;
 }
 
 @media (max-width:1000px){
@@ -161,7 +231,7 @@ main{
         flex-basis: 100%;
     }
 }
-
+*/
 
  /*   Footer  */
 
