--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,4 @@
 *{
-    margin: auto;
-    padding: 0;
     box-sizing: border-box;  
 } 
 
@@ -18,20 +16,38 @@ body{
 
 
 /* Nav Bar */
-ul, nav{
+ul{
     list-style: none;
 }
 
-a{
-    text-decoration: none;
-    color: inherit;
+#navbar{
+    display: grid;
+    z-index: 1;
+    top: 75px;
+    left: 0;
+    right: 0;
+    vertical-align: middle;
+    overflow-y: hidden;
+    text-decoration-color: turquoise;
     cursor: pointer;
-    opacity: 0.9;
-    
+    opacity: 1;
+    justify-content: center;
+    margin: -5rem;
 }
 
-a:hover{
-    opacity: 1;
+#navbar ul li a{
+    color: #A93F55;
+    justify-content: center;
+    align-items: center;
+    margin: -1%;
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+#navbar a:hover{
+    color: white;
+    opacity: 0.5;
 }
 
 .round{
@@ -39,17 +55,20 @@ a:hover{
     border-radius: 50%;
 }
 
+/*
 ul.grid {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
+*/
 
 
 /* Hero */
 .hero { 
-    background-color: transparent;
+    background-color: #061555ca;
+    padding: 10rem 3rem 0;
     position: relative;
     justify-content: center;
     min-height: 10px;
