added a margin property to the img elements to 0 and auto, centering the images.

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,7 @@ header nav li:last-child{
     max-width: 75%;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
     
 }
 
