--- a/css/styles.css
+++ b/css/styles.css
@@ -7,42 +7,59 @@ html {
   }
 
 body{
-    font: normal 18px "Arial", sans-serif ;
+    font-family: Arial, Helvetica, sans-serif; ;
     text-align: center;
     color: #1B4079;
-    background-color: #92DCE5;
+    background-color: #B88DB5;
 }
 
-
+li{
+    display: inline-block;
+}
 
 /* Nav Bar */
 ul{
-    list-style: none;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+    position: relative;
+    min-width: 350px;
+    /* list-style: none; */
+}
+
+.nav-title{
+    flex-grow: 1;
+    color: #094074;
 }
 
 #navbar{
-    display: grid;
+    display: flex;
     z-index: 1;
-    top: 75px;
-    left: 0;
-    right: 0;
+    /* top: 75px; */
+    /* left: 0; */
+    /* right: 0; */
     vertical-align: middle;
     overflow-y: hidden;
     text-decoration-color: turquoise;
     cursor: pointer;
     opacity: 1;
-    justify-content: center;
-    margin: -7rem;
+    justify-content: space-between;
+    /* margin: -7rem; */
 }
 
 #navbar ul li a{
-    color: #A93F55;
+    color: #061555;
     justify-content: center;
     align-items: center;
-    margin: -1%;
+    /* margin: -1%; */
     display: flex;
     width: 100%;
     height: 100%;
+}
+
+#navbar ul li{
+    padding: 15px;
+    
 }
 
 #navbar a:hover{
@@ -50,26 +67,70 @@ ul{
     opacity: 0.5;
 }
 
-.round{
+
+
+/* .round{ 
     border: 6px solid #000000;
     border-radius: 50%;
-}
+} */
 
 
 
 
 /* Hero */
 .hero { 
-    background-color: #061555ca;
-    padding: 10rem 3rem 0;
+    background-color: #061555;
+    /* padding: 10rem 3rem 0; */
     position: relative;
     justify-content: center;
-    min-height: 10px;
+    /* min-height: 10px; */
     color: #fff;
     text-align: center;
 }
 
 
+.hero-image {
+    /* The image used */
+    background-image: url("../images/tiger_milk_tea.jpg");
+
+    /* Add the blur effect */
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+
+    /* background-size: cover; */
+    /* background-position: center; */
+    
+    /* mininum height */
+    min-height: 450px;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* display: block; */
+  }
+  
+ /* Position text in the middle of the page/image */
+  .bg-text {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.5); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 30px;
+    text-align: center;
+  }
+
+
+  
+
+/* 
 .hero .hero-boba{
     position: relative;
     top:0;
@@ -79,7 +140,7 @@ ul{
     z-index: -1;
     
     background-color: #1A77C1;
-}
+} */
 
 .hero .hero-boba:after{
     content: '';
@@ -87,20 +148,20 @@ ul{
     top: 0;
     left: 0;
     
-}
+}*/
 
 
 /* Header */
 
 header{
-    display: flex;
-    position: fixed;
+    /* display: flex; */
+    /* position: fixed; */
     top: 0;
     left: 0;
     width: 100%;
     align-items: center;
     justify-content: space-around;
-    padding: 40px 50px 25px;
+    /* padding: 40px 50px 25px; */
     color: #A93F55;
     background-color: rgba(0, 0, 0, .7);
     z-index: 10;
@@ -131,7 +192,7 @@ header nav li:last-child{
 
 @media(max-width: 1000px){
     header{
-        padding: 20px 50px;
+        /* flex-direction: row; */
        
     }
 }
@@ -141,7 +202,7 @@ header nav li:last-child{
         flex-direction: column;
     }
     header h2{
-        margin-bottom: 10px;
+        /* margin-bottom: 10px; */
     }
 }
 
@@ -149,7 +210,7 @@ header nav li:last-child{
 /* ABOUT */
 
 .about-boba {
-    border-top: 2em;
+    /* border-top: 2em; */
     flex-flow: row;
 }
 
@@ -169,11 +230,11 @@ header nav li:last-child{
  /*   (SAVE FOR FUTURE USE?)  */
 
 
-.row{
+/* .row{
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
+ } */
    /*   (SAVE FOR FUTURE USE?)  */
 
 
@@ -217,7 +278,7 @@ footer ul{
 }
 
 footer ul li{
-    margin: 5px 15px auto;
+    margin: 5px 10px auto;
     justify-content: center;
     
 }
@@ -237,8 +298,11 @@ footer p{
     margin-bottom: 12px;
 }
 
-footer p a{
-    color: #fff
+footer li a{
+    color: #094074;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
