--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body{
     font-family: Arial, Helvetica, sans-serif; ;
     text-align: center;
     color: #1B4079;
-    background-color: #B88DB5;
+    background-color: #F58848;
 }
 
 li{
@@ -32,47 +32,81 @@ ul{
     color: #094074;
 }
 
-#navbar{
-    display: flex;
-    z-index: 1;
+.navbar{
+    /* display: flex;
+    z-index: 1; */
     /* top: 75px; */
     /* left: 0; */
     /* right: 0; */
-    vertical-align: middle;
+    /* vertical-align: middle;
     overflow-y: hidden;
     text-decoration-color: turquoise;
     cursor: pointer;
     opacity: 1;
-    justify-content: space-between;
+    justify-content: space-between; */
     /* margin: -7rem; */
+    overflow: hidden;
+    background-color: #333;
 }
 
-#navbar ul li a{
-    color: #061555;
+.navbar a{
+    /* color: #061555;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     /* margin: -1%; */
-    display: flex;
+    /* display: flex;
     width: 100%;
-    height: 100%;
+    height: 100%; */
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
-#navbar ul li{
-    padding: 15px;
-    
+
+
+.navbar a:hover{
+    /* color: white;
+    opacity: 0.5; */
+    background-color: #ddd;
+    color: black;
 }
 
-#navbar a:hover{
+.navbar a.active{
+    background-color: #453F78;
     color: white;
-    opacity: 0.5;
 }
 
+.navbar .icon{
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .navbar.responsive {position: relative;}
+    .navbar.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .navbar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
 
 
-/* .round{ 
-    border: 6px solid #000000;
-    border-radius: 50%;
-} */
 
 
 
@@ -227,17 +261,28 @@ header nav li:last-child{
 
 
 
- /*   (SAVE FOR FUTURE USE?)  */
 
+/* Back to Top Button */
 
-/* .row{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
- } */
-   /*   (SAVE FOR FUTURE USE?)  */
-
-
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
 
 
 
