--- a/css/styles.css
+++ b/css/styles.css
@@ -318,8 +318,9 @@ header nav li:last-child{
 
 footer ul{
     display: flex;
-    margin-bottom: 25px;
+    /* margin-bottom: 25px; */
     font-size: 32px;
+    padding: 1em;
 }
 
 footer ul li{
