Found out that the images do work, it just doesn't want to show up on my end,

--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ header nav li:last-child{
     /* background-image: url("../images/human-hand-holding-a-bottle-of-iced-cold-bubble-tea-royalty-free-image-1615834385.jpg"); */
     
     min-width: 150px;
-    float: right;
+    /* float: right; */
 } 
 
 
