--- a/css/styles.css
+++ b/css/styles.css
@@ -405,6 +405,9 @@ footer li a{
         text-align: center;
 }
 
+} /* End block */
+
+
 
 
 /* Media Screen of 425px (Mobile) */
@@ -438,6 +441,5 @@ footer li a{
         max-height: 200px;
     }
 
-}
+}   /* End block */
 
-}
