--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ footer li a{
 
 /* Over 700px */
 
-@media screen and (min-width: 700px) {
+@media screen and (max-width: 700px) {
 
     /* NavBar */
 
